Microservices/deploy/dennis-mobile-gateway/dennis-mobile-gateway.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dennis-mobile-gateway
  namespace: default
  labels:
    app: dennis-mobile-gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dennis-mobile-gateway
    spec:
      containers:
      - name: dennis-mobile-gateway
        image: "dennis-mobile-gateway:1.0.0"
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: "/app/appsettings.json"
            name: appsettings
            subPath: appsettings-1.0.0.json
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /live
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          periodSeconds: 3
          successThreshold: 2
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
      terminationGracePeriodSeconds: 10
      volumes:
        - name: appsettings
          configMap:
              name: dennis-mobile-gateway-config
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: dennis-mobile-gateway
  namespace: default
  labels:
    app: dennis-mobile-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: dennis-mobile-gateway
